--- a/timesheets/templates/timesheet_query.html
+++ b/timesheets/templates/timesheet_query.html
@@ -4,7 +4,7 @@
             <form method="POST" class="post-form">
                 {% csrf_token %}    
                 {{ form.as_p }}
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             {% endblock %}
 			
