--- a/timesheets/templates/query_results.html
+++ b/timesheets/templates/query_results.html
@@ -1,6 +1,10 @@
 		{% extends 'one_column_base.html' %}
 
             {% block content %}
+                  {% if total_time.time_spent__sum != None %}
+                        <img src="{% url 'HoursPieChart' %}">
+                  {% endif %}
+
             <table cellspacing="0">
             <tr class="border_bottom">
             	<td>Date</td>
@@ -12,8 +16,8 @@
             {% for entry in results %}
             <tr>
                   <td align="center">{{ entry.entry_date|date:"m/d/y" }}&nbsp;</td>
-                  <td align="center">{{ entry.dev_ID.username }}</td>
-                  <td align="center">{{ entry.project_ID.project_name }}</td>
+                  <td align="left">&nbsp;{{ entry.dev_ID.username }}</td>
+                  <td align="left">{{ entry.project_ID.client }}: {{ entry.project_ID.project_name }}</td>
                   <td align="center">{{ entry.items_complete }}</td>
                   <td align="center">{{ entry.time_spent }}</td>
             </tr>
